--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
+  background-color: #eff6e0;
   min-height: 100vh;
 }
 
